Support for more gc log events + json serialisation for the front end